# neurofire

./: .gitmodules  .travis.yml  LICENSE  README.md  setup.py
example_configurations/cremi/: data_config.yml
example_configurations/isbi2012/: data_config.yml
neurofire/criteria/: loss_transformations.py  loss_transforms.py  loss_wrapper.py  malis.py  multi_scale_loss.py  mutex_malis.py
neurofire/criteria/malis/: README.md  __init__.py  malis.py  pretraining.py
neurofire/criteria/malis/malis_impl/: CMakeLists.txt  __init__.py
neurofire/criteria/malis/malis_impl/include/: malis_impl.hxx
neurofire/criteria/malis/malis_impl/src/: CMakeLists.txt  __init__.py  malis.cxx  malis_impl.cxx
neurofire/criteria/malis/malis_impl/test/: test_malis_impl.py
neurofire/criteria/malis/malis_impl/test/cython_impl/: malis.cxx  malis_glue.pyx
neurofire/datasets/cremi/loaders/: __init__.py  master.py  membranes.py  raw.py
neurofire/datasets/cremi/pipelines/: basic.py
neurofire/datasets/isbi2012/loaders/: __init__.py  master.py  master3d.py  membranes.py  raw.py
neurofire/datasets/loader/: __init__.py  raw.py  segmentation.py
neurofire/datasets/merge_net/: __init__.py  merge_net.py
neurofire/inference/: __init__.py  blending.py  inference_engine.py  simple.py  test_time_augmentation.py
neurofire/inference/server/: base.py  serial_data_parallel.py
neurofire/metrics/: arand.py
neurofire/models/: __init__.py  base.py  cantor.py  unet_2d.py
neurofire/models/cantor/: cantor.py
neurofire/models/dense_unet/: __init__.py  base.py  dense_unet_2d.py  dense_unet_2p5d.py  dense_unet_3d.py
neurofire/models/fcn/: fcn.py  resnet.py  resnet3d.py
neurofire/models/hed/: dense_hed.py  fusionhed.py  hed.py  hed2.py  m2fcn.py
neurofire/models/mad_net/: mad.py  mad_2d.py
neurofire/models/unet/: __init__.py  base.py  unet_2d.py  unet_2d_5l_dilated.py  unet_2d_5layers.py  unet_2d_dilated_global.py  unet_2d_multiscale.py  unet_2p5d.py  unet_3d.py  unet_3d_2l.py  unet_3d_multiscale.py
neurofire/models/unet_multiscale/: base.py  unet_2d_multiscale.py  unet_3d_multiscale.py
neurofire/models/wnet/: base.py  wnet_2d.py
neurofire/models/wnet_multiscale/: base.py  wnet_2d_multiscale.py
neurofire/transform/: affinities.py  artifact_source.py  defect_augmentation.py  false_merge_gt.py  invertible_transforms.py  segmentation.py  volume.py
neurofire/transforms/: segmentation.py  volume.py
scripts/cremi/: train.py
scripts/false_merge_gt/: artificial_false_merges.py  make_false_merge_gt.py  view_example.py
scripts/isbi/: data_config.yml  train_unet_isbi.py
tests/isbi/datasets/isbi/loaders/: data_config_test.yml  master.py
tests/neurofire/criteria/: base_test.py  loss_transforms.py  loss_wrapper.py  test_loss_transforms.py  test_loss_wrapper.py  test_malis.py  test_multiscale_loss.py  test_mutex_malis.py
tests/neurofire/criteria/malis/: test_malis.py  test_malis_impl.py
tests/neurofire/datasets/cremi/loaders/: data_config_test_affinities.yml  data_config_test_affinities_multi_order.yml  data_config_test_membranes.yml  master.py
tests/neurofire/datasets/isbi/loaders/: data_config_test_affinities.yml  master.py
tests/neurofire/metrics/: test_arand.py
tests/neurofire/models/: cantor.py  test_cantor.py  test_dense_hed.py  test_dunet.py  test_hed.py  test_m2fcn.py  test_mad2d.py  test_unets.py  test_unets_multiscale.py  test_wnet.py  test_wnet_multiscale.py  unet2d.py  unets.py
tests/neurofire/transform/: add_pp.sh  segmentation.py  test_false_merge_gt.py  test_segmentation.py  test_volume.py
tests/neurofire/transforms/: segmentation.py  volume.py
